crates/wac-parser/tests/resolution/fail/invalid-alias.wac
package test:comp;

interface a {

}

type x = a;